x40 Magnification added